# ChangeLog for sys-kernel/suspend2-sources
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/suspend2-sources/ChangeLog,v 1.95 2007/05/19 08:58:20 alonbl Exp $

*suspend2-sources-2.6.21-r4 (19 May 2007)
*suspend2-sources-2.6.20-r6 (19 May 2007)

  19 May 2007; Alon Bar-Lev <alonbl@gentoo.org>
  +suspend2-sources-2.6.20-r6.ebuild, -suspend2-sources-2.6.21-r3.ebuild,
  +suspend2-sources-2.6.21-r4.ebuild:
  Version bump

  17 May 2007; Alon Bar-Lev <alonbl@gentoo.org>
  suspend2-sources-2.6.21-r3.ebuild:
  Need newer userui

*suspend2-sources-2.6.21-r3 (17 May 2007)

  17 May 2007; Alon Bar-Lev <alonbl@gentoo.org>
  -suspend2-sources-2.6.21.ebuild, -suspend2-sources-2.6.21-r1.ebuild,
  -suspend2-sources-2.6.21-r2.ebuild, +suspend2-sources-2.6.21-r3.ebuild:
  Version bump

*suspend2-sources-2.6.21-r2 (15 May 2007)

  15 May 2007; Alon Bar-Lev <alonbl@gentoo.org>
  +suspend2-sources-2.6.21-r2.ebuild:
  Version bump

  11 May 2007; Alon Bar-Lev <alonbl@gentoo.org>
  suspend2-sources-2.6.21-r1.ebuild:
  Version bump (again)

*suspend2-sources-2.6.21-r1 (11 May 2007)

  11 May 2007; Alon Bar-Lev <alonbl@gentoo.org>
  +suspend2-sources-2.6.21-r1.ebuild:
  Version bump

*suspend2-sources-2.6.21 (28 Apr 2007)

  28 Apr 2007; Alon Bar-Lev <alonbl@gentoo.org>
  suspend2-sources-2.6.20-r5.ebuild, +suspend2-sources-2.6.21.ebuild:
  Version bump, remove vesafb-tng patch

*suspend2-sources-2.6.20-r5 (25 Apr 2007)

  25 Apr 2007; Alon Bar-Lev <alonbl@gentoo.org>
  -suspend2-sources-2.6.20-r4.ebuild, +suspend2-sources-2.6.20-r5.ebuild:
  Version bump

*suspend2-sources-2.6.20-r4 (14 Apr 2007)

  14 Apr 2007; Alon Bar-Lev <alonbl@gentoo.org>
  -suspend2-sources-2.6.20-r3.ebuild, +suspend2-sources-2.6.20-r4.ebuild:
  Version bump

*suspend2-sources-2.6.20-r3 (23 Mar 2007)

  23 Mar 2007; Alon Bar-Lev <alonbl@gentoo.org>
  -files/suspend2-2.2.9.7-kunmapping.patch, -suspend2-sources-2.6.20.ebuild,