@@ -18,6 +18,8 @@ DIST genpatches-2.6.20-7.base.tar.bz2 82186 RMD160 065fe6ad2a502f09118da8de48a35
 DIST genpatches-2.6.20-7.extras.tar.bz2 143454 RMD160 cc2385995956eca95b968394f71c128bc2944881 SHA1 180dcd3f60bfa01ed380726fcf37ef0d9b31837a SHA256 85045253ca5b72d20e95816c2ce29d4a6f1a3255b18ca4ea38c7bb5c20aec629
 DIST genpatches-2.6.21-2.base.tar.bz2 6792 RMD160 c72ff75bd748fc87c4cefb8092934c6c10f28c4e SHA1 f0f64ddfe9ebb4982fc03dc9ddcc57082d66bfa0 SHA256 b486390c5fd0f55605e92fc476fe6be57125a2b384860fa00d62aa43146f04ca
 DIST genpatches-2.6.21-2.extras.tar.bz2 141178 RMD160 e4909bfb785c28aebf0790674cedf9794b31fdf3 SHA1 32baadc7f1e27d64856ab8566ec9ff48633be58e SHA256 3649ed51afd51ca51fa629093b2e969284fa2ce5ddb0afffc0ebee7a94436a16
+DIST genpatches-2.6.21-4.base.tar.bz2 59921 RMD160 653f77ebae9433497344ee2908158d7e4c9809bf SHA1 85893fcd470553e8b8cc955fd8e4521e17d34fb8 SHA256 ed8a8954faff48523b33ec618566cde0dcc4051f78e530785a867158aa39cf5d
+DIST genpatches-2.6.21-4.extras.tar.bz2 141178 RMD160 e4909bfb785c28aebf0790674cedf9794b31fdf3 SHA1 32baadc7f1e27d64856ab8566ec9ff48633be58e SHA256 3649ed51afd51ca51fa629093b2e969284fa2ce5ddb0afffc0ebee7a94436a16
 DIST linux-2.6.18.tar.bz2 41863580 RMD160 f92283f956880676bfb1f1d5288325461e4e02e7 SHA1 178f7d5bb3af0978d42b37651b8753323c7129c2 SHA256 c95280ff6c5d2a17788f7cc582d23ae8a9a7ba3f202ec6e4238eaadfce7c163d
 DIST linux-2.6.19.tar.bz2 42733268 RMD160 75dc65b15cf9cdb359b1abe7084907982c19088b SHA1 c00d5891e2461bce45be51c1ef7846ee842792dd SHA256 c2fd6bcd2b7c1b3d37d64e4d1825703792a75474830a3db7d2dc603a8d392d58
 DIST linux-2.6.20.tar.bz2 43375937 RMD160 14657ade7be4363143dbd5593f5710d21eda7a03 SHA1 e730979adfb287528263e779c91284659672510d SHA256 2c14ada1ac7d272e03b430d3a530d60fc9ec69cc8252382aa049afba7d2b8558
@@ -56,10 +58,14 @@ EBUILD suspend2-sources-2.6.21-r4.ebuild 1272 RMD160 4c6c2b018f189313849df8e9724
 MD5 ef6bf9f2184487f86500f1d2706b1657 suspend2-sources-2.6.21-r4.ebuild 1272
 RMD160 4c6c2b018f189313849df8e97242dace8abe0541 suspend2-sources-2.6.21-r4.ebuild 1272
 SHA256 8e6a2c55f04ae5f98766a38f7dd3f75db8b6521edad6c29f9ee613820f887d5c suspend2-sources-2.6.21-r4.ebuild 1272
-MISC ChangeLog 22874 RMD160 80181d5f15dee39114ebd35c9fe6bfbaea06670b SHA1 b06989463cdfe8d915567ce43afcb830d6376dd9 SHA256 cf93e69d71bb9fb2348a83b89a7e595ceecd039baffe5769ac3a019a3468ba47
-MD5 9ca50e02eb043afdac5e5599226421b6 ChangeLog 22874
-RMD160 80181d5f15dee39114ebd35c9fe6bfbaea06670b ChangeLog 22874
-SHA256 cf93e69d71bb9fb2348a83b89a7e595ceecd039baffe5769ac3a019a3468ba47 ChangeLog 22874
+EBUILD suspend2-sources-2.6.21-r5.ebuild 1272 RMD160 793e30b3a54ee1b40b88305ff460e356d709c631 SHA1 2313f0de5d31bb5b71528414fb880ed1d184b5a4 SHA256 69053cfbfbe2901031c165b68523215684cf5b136833f00ae6c9dac4d5ceba65
+MD5 61f82389424382d04d66d6ced01b3bcf suspend2-sources-2.6.21-r5.ebuild 1272
+RMD160 793e30b3a54ee1b40b88305ff460e356d709c631 suspend2-sources-2.6.21-r5.ebuild 1272
+SHA256 69053cfbfbe2901031c165b68523215684cf5b136833f00ae6c9dac4d5ceba65 suspend2-sources-2.6.21-r5.ebuild 1272
+MISC ChangeLog 23022 RMD160 4bb6264ac34f231646f470e3fb3337508c4ca90e SHA1 1a2e64528221ae0ca89691f1f4f06b54b226776f SHA256 d3a00531faacd4d8466d29b269b18cbb4b6449668430c53406fcd918e1d70663
+MD5 643878cdaea9c759c12934aa8ccacd06 ChangeLog 23022
+RMD160 4bb6264ac34f231646f470e3fb3337508c4ca90e ChangeLog 23022
+SHA256 d3a00531faacd4d8466d29b269b18cbb4b6449668430c53406fcd918e1d70663 ChangeLog 23022
 MISC metadata.xml 269 RMD160 6153fff8b8ea0cdbdf6375aec0de85d7b9fd57f3 SHA1 7120c0e72ed1d0ad61e416cdcd013a2390880640 SHA256 4b5337bb81db762bebe9e6ef3c2355aa172ffa553effe4940fd0141a85158eaf
 MD5 b52ea8e392f4fb6d24f937ca7bbd3c85 metadata.xml 269
 RMD160 6153fff8b8ea0cdbdf6375aec0de85d7b9fd57f3 metadata.xml 269
@@ -85,3 +91,6 @@ SHA256 3f11af61fb1a67cb558328cd5f31ccbb9cabb2a195865ed33c67699c04b1acb8 files/di
 MD5 1a7f3817b28c17f581ae8b215877ffb3 files/digest-suspend2-sources-2.6.21-r4 1093
 RMD160 f187cca435cd737ddad02debfe63d16c911fbca3 files/digest-suspend2-sources-2.6.21-r4 1093
 SHA256 c3682cafa8cf0a6536d1ed3bae1545a30f27e57ea5268522bea3c894ca0969bc files/digest-suspend2-sources-2.6.21-r4 1093
+MD5 d9d94fe9c1fe3d1910415691642a9573 files/digest-suspend2-sources-2.6.21-r5 1096
+RMD160 5493fc28d527ecb41a041a2046f4349465e7576e files/digest-suspend2-sources-2.6.21-r5 1096
+SHA256 539f6e0365231a2cf6154fff6d89e4ea77ada53ed7109e25435010303e441526 files/digest-suspend2-sources-2.6.21-r5 1096
