@@ -1,0 +1,12 @@
+MD5 8978fbd718d24cee974aac7d8a50f063 genpatches-2.6.21-4.base.tar.bz2 59921
+RMD160 653f77ebae9433497344ee2908158d7e4c9809bf genpatches-2.6.21-4.base.tar.bz2 59921
+SHA256 ed8a8954faff48523b33ec618566cde0dcc4051f78e530785a867158aa39cf5d genpatches-2.6.21-4.base.tar.bz2 59921
+MD5 09a522bd61ac44c1839518fc22a05308 genpatches-2.6.21-4.extras.tar.bz2 141178
+RMD160 e4909bfb785c28aebf0790674cedf9794b31fdf3 genpatches-2.6.21-4.extras.tar.bz2 141178
+SHA256 3649ed51afd51ca51fa629093b2e969284fa2ce5ddb0afffc0ebee7a94436a16 genpatches-2.6.21-4.extras.tar.bz2 141178
+MD5 1b515f588078dfa7f4bab2634bd17e80 linux-2.6.21.tar.bz2 43997476
+RMD160 b2badf41c61f66b0dda059d99a57c2e2c0ea13f4 linux-2.6.21.tar.bz2 43997476
+SHA256 f187b12d70e0a48ce81f0472dfe9504fb5f0f966be339ac9d57dd2b991a74942 linux-2.6.21.tar.bz2 43997476
+MD5 f3e50976d7ada68d75e4b3c4d3914a72 suspend2-2.2.10-for-2.6.21.1.patch.bz2 95850
+RMD160 67049f509beb4807f823d7572c29db1f1cf955c1 suspend2-2.2.10-for-2.6.21.1.patch.bz2 95850
+SHA256 12c68eb3de203b5428e0c10b670650394b15f57bc39c9ce29bcbdb176e4190f1 suspend2-2.2.10-for-2.6.21.1.patch.bz2 95850
