@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/suspend2-sources
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/suspend2-sources/ChangeLog,v 1.95 2007/05/19 08:58:20 alonbl Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/suspend2-sources/ChangeLog,v 1.96 2007/05/26 02:00:09 alonbl Exp $
+
+*suspend2-sources-2.6.21-r5 (26 May 2007)
+
+  26 May 2007; Alon Bar-Lev <alonbl@gentoo.org>
+  +suspend2-sources-2.6.21-r5.ebuild:
+  Genpatches bump
 
 *suspend2-sources-2.6.21-r4 (19 May 2007)
 *suspend2-sources-2.6.20-r6 (19 May 2007)
